plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
    id "org.sonarqube" version "4.4.1.3373"
    id 'jacoco'
}

group = 'com.pragma.foodcourt.users'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	springBootVersion = "2.7.3"
	mapstructVersion = "1.5.2.Final"
	lombokVersion = "1.18.24"
	lombokMapstructBindingVersion = "0.2.0"
	openApiVersion = "1.6.11"
}

dependencies {
	// JDBC y PostgreSQL (mantener)
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	runtimeOnly 'org.postgresql:postgresql'

	// Otras dependencias necesarias para tu app (no relacionadas con DB relacional)
	implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
	developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"

	// MapStruct y Lombok
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'

	// OpenAPI
	implementation "org.springdoc:springdoc-openapi-ui:${openApiVersion}"
	implementation "org.springdoc:springdoc-openapi-webflux-ui:${openApiVersion}"

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'

	//Twilio
	implementation group: 'com.twilio.sdk', name: 'twilio', version: '10.9.2'

	//mongo db
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

}

// Eliminar: spring-boot-starter-data-jpa y MySQL
// implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
// runtimeOnly "mysql:mysql-connector-java:${mySqlConnectorVersion}"

tasks.named('test') {
	useJUnitPlatform()
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.sources", "src/main/java,settings.gradle,build.gradle"
        property "sonar.tests", "src/test/java"
        property "sonar.java.binaries", "build/classes/java/main"
        property "sonar.test.binaries", "build/classes/java/test"
        property "sonar.junit.reportsPath", "build/test-results/test"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.coverage.exclusions", "**/SquareMallManagmentApplication.java,**/dto/**/*,**/mapper/**/*,**/exception/**/*,**/model/*,**/entity/**/*,**/configuration/**/*,**/config/**/*,**/filter/**/*,**/auth/**/*,**/exceptionhandler/**/*,**/test/**/*,**/documentation/**/*,**/util/**/*"
    }
}


jacoco {
    toolVersion = "0.8.11"
}
jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}
